Create new endpoint to delete run files
